fix scrollbar

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,5 +19,5 @@ html {
 }
 /* Optional: show position indicator in red */
 ::-webkit-scrollbar-thumb {
-  background: #FF0000;
+  background: transparent;
 }
